meja/tests/shadowing-module-type-prover.meja
module type M = {
  type t;
};

Prover {
  module type M = {
    type u;
  };
};
